[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = ""
authors = ["Fiona Lazarus"]
readme = "README.md"
packages = [{ include = "fetcher" }]

[tool.poetry.dependencies]
python = "^3.10"
biopython = "^1.85"
pandas = "^2.2.3"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "fetcher.main:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.1.2"
